# stockinfo2

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Agent 3 Gemini.md  Agent1 Ptompt Claude.txt  Agent2 Ptompt GPT - Kopie.txt  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_STATUS_AND_NEXT_STEPS.md  GROWTH_ANALYSIS_INTEGRATION.md  Initial Claude code Prompt.md  Initial Prompt.txt  Makefile  README.md  TESTING_STATUS.md  Technical analysis agent.md  Technical analysis agent.txt  _todos_tmp.txt  add_faithward.py  check_citadel.py  docker-compose.cpu.yml  docker-compose.no-vpn.yml  docker-compose.override.yml  docker-compose.yml  kopie.txt  pyproject.toml  run_migration.py  scoring agent draft.md  scoring values.json  source.code-workspace  tech-analysis-logic-update.md  test_growth_analysis.py  test_search.py
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: __init__.py  analysis_engine.py  investor_tracking.py  market_sentiment.py  mcp_client.py  stock_research.py  supervisor.py
agents/prompts/: error_suggestion.md  market_sentiment.md  stock_analysis.md
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/agents/: etf_data_agent.py  growth_analysis_agent.py  market_analysis_agent.py  risk_assessment_agent.py  technical_analysis_agent.py  web_scraping_agent.py
backend/app/api/: __init__.py  docs.py
backend/app/api/routes/: __init__.py  config.py  etfs.py  funds.py  health.py  market.py  reports.py  stocks.py  websites.py  websocket.py
backend/app/core/: exceptions.py  logging.py  rate_limiter.py
backend/app/db/: crud.py  models.py  session.py
backend/app/schemas/: config.py  etfs.py  funds.py  market.py  stocks.py
backend/app/services/: alpha_vantage.py  cache.py  cusip_mapper.py  financial_calculator.py  fund_validator.py  peer_comparison.py  sec_edgar.py  sector_comparison.py  yahoo_finance.py
backend/app/services/valuation/: __init__.py  company_classifier.py  method_selector.py  models.py  valuation_engine.py
backend/app/tasks/: __init__.py  etfs.py  funds.py  market.py  research.py  technical_analysis.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_growth_analysis_fields.sql  002_add_sector_index.sql  003_add_company_description.sql  004_add_web_scraped_market_data.sql  005_add_scraped_websites.sql  006_add_scraped_category_data.sql  007_add_valuation_fields.sql  008_add_etf_tables.sql
backend/scripts/: cleanup_duplicate_funds.py  fix_fund_data.py  init_db.py  start_beat_with_refresh.sh  trigger_duquesne_refresh.py
backend/tests/: __init__.py  conftest.py  test_api.py
config/: config.yaml
frontend/: Dockerfile  index.html  nginx.conf  nginx.host.conf  nginx.no-vpn.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ConfigWizard/: ConfigWizard.tsx
frontend/src/components/Configuration/: Configuration.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  DataSourceHealth.tsx  MarketOverview.tsx  SentimentCard.tsx  Sparkline.tsx  TopNews.tsx  WebScrapedMarketCard.tsx
frontend/src/components/DataSourceBadge/: DataSourceBadge.tsx
frontend/src/components/ETFTracker/: ETFTracker.tsx
frontend/src/components/ErrorSuggestion/: ErrorSuggestion.tsx
frontend/src/components/FundTracker/: FundTracker.tsx
frontend/src/components/JobProgressManager/: JobProgressManager.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Overview/: Overview.tsx
frontend/src/components/ProgressTracker/: ProgressTracker.tsx
frontend/src/components/StockCard/: StockCard.tsx
frontend/src/components/StockResearch/: CollapsibleSection.tsx  DataQualityBadge.tsx  DataSourcesTable.tsx  GrowthAnalysisCard.tsx  KeyInsights.tsx  MACDCard.tsx  PortfolioAllocation.tsx  PriceTargets.tsx  ResearchSidebar.tsx  RiskAssessmentCard.tsx  RiskIndicator.tsx  ScoringBreakdown.tsx  SectorComparisonCard.tsx  StockResearch.tsx  TechnicalAnalysisChart.tsx  TechnicalIndicatorsPanel.tsx  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/stores/: etfNotificationStore.ts  fundNotificationStore.ts  researchStore.ts
frontend/src/styles/: theme.ts
frontend/src/types/: index.ts  risk-assessment.ts  technical-analysis.ts
frontend/tests/: dashboard.spec.ts  fund-tracker.spec.ts
pipelines/: __init__.py  definitions.py
pipelines/assets/: __init__.py  fund_holdings.py  market_sentiment.py  stock_prices.py  web_scraped_market.py
(+18 files in other folders)
